--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,9 @@
 /* styles.css */
-body {
-    background-color: #f8fffe;
-    margin: 0;
-    padding: 0;
-    font-family: Arial, sans-serif;
-}
-
-blockquote.questions {
+.questions {
     background-color: #f8fffe;
     margin-top: 20px;
-    padding: 15px;
     max-width: 600px;
     border-left: 8px solid green;
-}
-
-p {
-    margin: 0;
+    padding: 15px 0 15px 15px;
+    height: 50px;
 }
