--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
 /* styles.css */
-.questions {
+blockquote.questions {
     background-color: #f8fffe;
     margin-top: 20px;
     max-width: 600px;
     border-left: 8px solid green;
-    padding: 15px 0 15px 15px;
-    height: 50px;
+    padding: 15px;
+    height: 50px; /* Added height property here */
 }
